# FactorZen

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pixi.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.sisyphus/: boulder.json  进度总结.md
.sisyphus/drafts/: phase4-strategic-planning.md
.sisyphus/evidence/: task-0-daily_basic.txt  task-0-stock_basic_industry.txt  task-1-zero-std.txt
.sisyphus/plans/: phase2-lft-daily.md  phase3-lft-weekly-monthly.md  phase4-lft-advanced-mft.md
automation/: dag.py  jobs.py  state.py
benchmarks/: bench_evaluation.py
common/: __init__.py  calendar.py  config_loader.py  data_audit.py  data_ensure.py  data_quality.py  experiment.py  factor.py  loader.py  logger.py  registry.py  seed.py  storage.py  universe.py
config/: constants.py  settings.py  tushare_config.py
config/runs/: single_factor_momentum.yaml  walk_forward_example.yaml
daily/: __init__.py
daily/combination/: README.md  __init__.py  methods.py  pipeline.py
daily/data/: __init__.py  context.py  pit.py
daily/evaluation/: __init__.py  advanced.py  attribution.py  backtest.py  benchmark.py  correlation.py  cost_models.py  hyperparameter.py  ic_analysis.py  turnover.py  walk_forward.py  walk_forward_summary.py
daily/factors/: __init__.py  base.py  registry.py
daily/optimization/: __init__.py  covariance.py  max_sharpe.py  mean_variance.py  risk_parity.py
daily/preprocessing/: __init__.py  missing.py  neutralizer.py  normalizer.py  outlier.py  pipeline.py
data/: data_availability_report.txt
deploy/: ops.example.yaml  webservice.md  windows-task.md
deploy/docker/: Dockerfile  compose.yaml
deploy/systemd/: factorzen-ops.service  factorzen-ops.timer
docs/: README.md  architecture.md  end-to-end-tutorial.md  evolution-plan-2026.md  factor-authoring.md  intraday-features.md  performance.md  project-explanation.md  runbook.md  volume_return_corr_20d-signal-report.html  volume_return_corr_20d-tear-sheet.html  volume_return_corr_20d-trading-report.html
docs/archive/: README.md  进度总结.md
docs/assets/: brand.md
docs/concepts/: architecture.md  design-principles.md  factor-library.md  guardrails.md  multi-market.md
docs/examples/: README.md
docs/getting-started/: end-to-end-tutorial.md  installation.md  quickstart.md
docs/guides/: combination.md  deployment.md  execution.md  factor-authoring.md  mining.md  operations.md  performance.md  risk-and-portfolio.md
docs/reference/: artifacts.md  cli.md  configuration.md  data-sources.md  environment.md
docs/release-notes/: v0.1.0.md  v0.2.0.md  v0.3.0.md
intraday/: __init__.py
intraday/data/: __init__.py  context.py
intraday/evaluation/: __init__.py  backtest.py  ic_analysis.py
intraday/factors/: __init__.py  base.py  registry.py
intraday/preprocessing/: __init__.py  pipeline.py
reporting/: __init__.py  tear_sheet.py
reporting/templates/: intraday_ic.html  tear_sheet.html
research/combination/: README.md  __init__.py  methods.py  pipeline.py
scripts/: audit_raw_data.py  fetch_all_data.py  fetch_data.py  fetch_minute_data.py  generate_report.py  run_combination.py  run_coverage.py  run_daily_compare.py  run_daily_single.py  run_hyperparameter_search.py  run_intraday_single.py  run_lft_compare.py  run_lft_single.py  run_qlib_batch_reports.py  run_scheduler.py  run_walk_forward.py  smoke_data.py
tests/: __init__.py  _cli_lift_mocks.py  bench_evaluation.py  conftest.py  golden_ashare_prompts.json  test_advanced.py  test_agent_ashare_caveats.py  test_agent_candidates_csv.py  test_agent_cli.py  test_agent_dsr_parity.py  test_agent_eval_real_adj_and_leaves.py  test_agent_evaluation.py  test_agent_feedback.py  test_agent_generation.py  test_agent_guardrail_parity.py  test_agent_health_check.py  test_agent_manifest.py  test_agent_memory.py  test_agent_multiobjective.py  test_agent_nodes_eval.py  test_agent_nodes_gen.py  test_agent_orchestrator.py  test_agent_patience.py  test_agent_pipeline.py  test_agent_self_heal.py  test_agent_state.py  test_agent_structured.py  test_agent_warmup_parity.py  test_agent_wiring.py  test_agents_scout.py  test_architecture_dependencies.py  test_attach_intraday.py  test_attribution.py  test_attribution_brinson.py  test_attribution_risk.py  test_automation_dag.py  test_automation_jobs.py  test_automation_state.py  test_backtest.py  test_backtest_costs.py  (+309 more)
tests/agents/: test_campaign_prior.py  test_corr_panel_memory.py  test_deflation_objective.py  test_eval_hygiene.py  test_exec_convention.py  test_experiment_index.py  test_factor_library.py  test_feedback.py  test_feedback_prompt_exhausted.py  test_final_basis_deflation.py  test_frame_diet.py  test_guardrail_parity.py  test_guardrails_prior.py  test_leaf_attach.py  test_leaf_scout.py  test_library_mining.py  test_library_orthogonal_mining.py  test_lift_ctx_exec.py  test_lift_probation_cap.py  test_lift_probation_reject.py  test_loop_hygiene.py  test_loop_resilience.py  test_manifest_repro.py  test_markets.py  test_markets_multimarket.py  test_memory_feedback.py  test_mining_multimarket.py  test_nodes.py  test_nodes_eval.py  test_nodes_gen.py  test_objective_decorr.py  test_orchestration.py  test_orchestration_roles.py  test_residual_mining_objective.py  test_scout.py  test_team_lift_hook.py  test_team_roles.py  test_warmup.py  test_warmup_holdout.py  test_wiring_caveats.py  (+1 more)
tests/cli/: test_cli_core.py  test_combine_library_cli.py  test_library_cli.py  test_library_targeted_rebuild.py  test_mining_cli.py  test_pool_prebuild.py  test_portfolio_sim_cli.py  test_strategies_cli.py  test_validation_report_cli.py
tick/: README.md  __init__.py
tools/: README.md  audit_minute_bars.py  audit_minute_coverage.py  bench_evaluation.py  download_tushare_lake.py  ingest_minute.py  publish_track_record.sh  repair_raw_partition.py  run_coverage.py  run_tushare_lake.sh  smoke_data.py
webui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+576 files in other folders)
