[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorzen"
version = "0.2.0"
requires-python = ">=3.10,<3.13"
description = "FactorZen — disciplined A-share alpha research from signal to evidence"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "tushare>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "cvxpy>=1.4",
    "optuna>=3.5",
    "apscheduler>=3.10",
    "pydantic>=2.5",
    "joblib>=1.3",
    "PyYAML>=6.0",
    "pyqlib>=0.9.7",
    "protobuf<5",
    "setuptools>=69,<81",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.4.0",
    "ruff>=0.3.0",
    "jupyterlab>=4.0.0",
]

[tool.hatch.build.targets.wheel]
# 声明所有顶层包；注意 config 是自定义包，editable install 下优先于 PyPI 同名包
packages = ["common", "config", "daily", "intraday", "research", "reporting", "automation"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # 行长度由 formatter 管理
    "B008",   # 函数默认参数中的函数调用
    "SIM108", # 三元运算符（有时可读性更差）
    "RUF001", # 中文字符被误判为 ambiguous Unicode（正常中文注释/字符串）
    "RUF002", # 同上
    "RUF003", # 同上
    "RUF012", # ClassVar 在基类已声明，子类覆盖不需要重复注解
]

[tool.ruff.lint.isort]
known-first-party = ["common", "config", "daily", "intraday", "research", "reporting"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
cache_dir = ".cache/mypy"
sqlite_cache = false
# 渐进式：仅强制 common/ 和 daily/evaluation/ daily/preprocessing/
files = ["common", "daily/evaluation", "daily/preprocessing", "daily/factors", "research/combination", "reporting", "automation"]

[tool.coverage.run]
source = ["common", "daily/evaluation", "daily/preprocessing", "daily/factors", "research/combination", "reporting", "automation"]
omit = [
    "scripts/*",
    "docs/archive/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
