[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorzen"
version = "0.3.0"
requires-python = ">=3.10,<3.13"
description = "FactorZen — disciplined A-share alpha research from signal to evidence"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "tushare>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "cvxpy>=1.4",
    "ccxt>=4.2",
    "optuna>=3.5",
    "pydantic>=2.5",
    "joblib>=1.3",
    "PyYAML>=6.0",
    "pyqlib>=0.9.7",
    "protobuf<5",
    "setuptools>=69,<81",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "coverage>=7.4.0",
    "ruff>=0.3.0",
    "jupyterlab>=4.0.0",
    "hypothesis>=6.90",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "shap>=0.44",
]

[tool.hatch.build.targets.wheel]
packages = ["src/factorzen"]

[project.scripts]
fz = "factorzen.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # 行长度由 formatter 管理
    "B008",   # 函数默认参数中的函数调用
    "SIM108", # 三元运算符（有时可读性更差）
    "RUF001", # 中文字符被误判为 ambiguous Unicode（正常中文注释/字符串）
    "RUF002", # 同上
    "RUF003", # 同上
    "RUF012", # ClassVar 在基类已声明，子类覆盖不需要重复注解
]

[tool.ruff.lint.isort]
known-first-party = ["factorzen", "workspace"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# 屏蔽 matplotlib 在缺失中文字体环境（如 CI）下的 glyph 缺失告警。
# 字体优先级回退已在 reports/_charts.py 配置；安装任一 CJK 字体即可正常渲染。
# 仅精确屏蔽这一条 cosmetic 告警，其余告警照常暴露。
filterwarnings = [
    "ignore:Glyph .* missing from font.*:UserWarning",
    # starlette TestClient 内部 httpx 兼容告警(第三方,非本项目代码)
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
cache_dir = ".cache/mypy"
sqlite_cache = false
# 渐进式：仅强制核心框架包
files = ["src/factorzen"]

[tool.coverage.run]
source = ["src/factorzen"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
